New Post: Pi Zero Power Case

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/power_case.html">
+                        <span class="tag">[HW]</span><span>THE PI ZERO POWER CASE</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/dd12.html">
                         <span class="tag">[DD]</span><span>DEAD DROP 12 / NETGEAR 0DAY, PRE-CRIME AI, HARDWARE HACKING, CON VIDS</span>
                     </a>
