--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cd36.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 36 / DRONE SWARMS, DIY CENTRIFUGE, OCEAN NODES</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/power_case.html">
                         <span class="tag">[HW]</span><span>THE PI ZERO POWER CASE</span>
                     </a>
