New Post: USB Condom V3

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/usbcondom3.html">
+                        <span class="tag">[HW]</span><span>USB CONDOM KEYCHAIN (V3)</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/dd13.html">
                         <span class="tag">[DD]</span><span>DEAD DROP 13 / ACROBAT DODGINESS, HTTPS 2016, ZERONET BIRTHDAY, 3D FACE CAMERA</span>
                     </a>
