--- a/shop/index.html
+++ b/shop/index.html
@@ -25,6 +25,7 @@
     <div class="categories">
     Categories<br>
     --<br>
+    <a href="#hardware">Hardware</a><br>
     <a href="#tees">Tees</a><br>
     <a href="#stickers">Stickers</a>
     </div>
@@ -54,10 +55,18 @@
             <div id="list">
 
                 <div id="post">
-                <p>Welcome to the NODE shop! Thank you for supporting the site. New hardware products will be coming soon, so check back.</p>
+                <p>Welcome to the NODE shop! Thank you for supporting the site. If you have any questions about your order, email <a href="mailto:mail@n-o-d-e.net" target="_blank">mail@n-o-d-e.net</a> with your order details.</p>
 
                 <p>[All clothing &amp; stickers are produced/fulfilled by RedBubble, so when you click a BUY NOW link, you&#39;ll be redirected to the product page on their site. Worldwide shipping is available] </p>
 
+
+                <p id="hardware" class="subtitle">HARDWARE</p>
+
+                <img src="https://i.imgur.com/7RWrlSM.png" />
+                <p class="shop">USB Condom Keychain - Charge/power your USB devices safely with this hand-made keychain. Check <a href="https://n-o-d-e.net/usbcondom3.html" target="_blank">this video</a> for details/compatibility.<br>--<br>
+                &pound;8.75 + Shipping <a href="https://n-o-d-e.myshopify.com/cart/25852190859:1?channel=buy_button" target="_blank">[BUY NOW]</a> 
+                (Bitcoin accepted)
+                </p>
 
                 <p id="tees" class="subtitle">TEES</p>
 
