New Post: cli.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cli2.html">
+                        <span class="tag">[SW]</span><span>TOOLS TO SIMPLIFY THE COMMAND LINE: PART 2 (LINUX/MAC)</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="http://n-o-d-e.net/cli.html">
+                        <span class="tag">[SW]</span><span>TOOLS TO SIMPLIFY THE COMMAND LINE (LINUX/MAC)</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/usbcondom3.html">
                         <span class="tag">[HW]</span><span>USB CONDOM KEYCHAIN (V3)</span>
                     </a>
