--- a/shop/index.html
+++ b/shop/index.html
@@ -64,7 +64,7 @@
 
                 <img src="https://i.imgur.com/7RWrlSM.png" />
                 <p class="shop">USB Condom Keychain - Charge/power your USB devices safely with this hand-made keychain. Check <a href="https://n-o-d-e.net/usbcondom3.html" target="_blank">this video</a> for details/compatibility.<br>--<br>
-                &pound;8.75 + Shipping <a href="https://n-o-d-e.myshopify.com/cart/25852190859:1?channel=buy_button" target="_blank">[BUY NOW]</a> 
+                &pound;8.75 (~$11US) + Shipping <a href="https://n-o-d-e.myshopify.com/cart/25852190859:1?channel=buy_button" target="_blank">[BUY NOW]</a> 
                 (Bitcoin accepted)
                 </p>
 
