New Post: night vision

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/nightvision.html">
+                        <span class="tag">[HW]</span><span>CHEAP &amp; SMALL DIY NIGHT VISION</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/cli2.html">
                         <span class="tag">[SW]</span><span>TOOLS TO SIMPLIFY THE COMMAND LINE: PART 2 (LINUX/MAC)</span>
                     </a>
