--- a/shop/index.html
+++ b/shop/index.html
@@ -63,9 +63,10 @@
                 <p id="hardware" class="subtitle">HARDWARE</p>
 
                 <img src="https://i.imgur.com/7RWrlSM.png" />
-                <p class="shop">USB Condom Keychain - Charge/power your USB devices safely with this hand-made keychain. Check <a href="https://n-o-d-e.net/usbcondom3.html" target="_blank">this video</a> for details/compatibility.<br>--<br>
-                &pound;8.75 (~$11US) + Shipping <a href="https://n-o-d-e.myshopify.com/cart/25852190859:1?channel=buy_button" target="_blank">[BUY NOW]</a> 
-                (Bitcoin accepted)
+                <p class="shop">USB Condom Keychain - Charge/power your USB devices safely with this hand-made keychain. <a href="https://n-o-d-e.net/usbcondom3.html" target="_blank">View video</a> for details/compatibility. Bitcoin accepted<br>--<br>
+                &pound;8.75 (~$11US) + Shipping <a href="https://n-o-d-e.myshopify.com/cart/25852190859:1?channel=buy_button" target="_blank">[BUY NOW]</a><br>
+                <br>
+                Note: I make these in regular batches, so if it says "Sold Out", check back.
                 </p>
 
                 <p id="tees" class="subtitle">TEES</p>
