--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cd37.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 37 / FULL BODY VR, 3D BONES, ROBOT WORKERS, USB CONDOM</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/nightvision.html">
                         <span class="tag">[HW]</span><span>CHEAP &amp; SMALL DIY NIGHT VISION</span>
                     </a>
@@ -67,7 +73,7 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <li>
                     <a href="http://n-o-d-e.net/usbcondom3.html">
-                        <span class="tag">[HW]</span><span>USB CONDOM KEYCHAIN (V3)</span>
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>USB CONDOM KEYCHAIN (V3)</span>
                     </a>
                 </li>
 
