--- a/cd37.html
+++ b/cd37.html
@@ -143,7 +143,7 @@
 
                 <p class="subtitle">VISIT THE NODE SHOP</p>
 
-                <p><a href="https://N-O-D-E.net/shop" target="_blank">https://N-O-D-E.net/shop</p>
+                <p><a href="https://N-O-D-E.net/shop" target="_blank">https://N-O-D-E.net/shop</a></p>
 
 
                 <p>--<br>
