New Post: Updates

--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/node_updates2.html">
+                        <span class="tag">[NO]</span><span>NODE UPDATES</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/pipyramid.html">
-                        <span class="tag">[HW]</span><span>PI PYRAMID HOME BOT (MINI MAGIC MIRROR)</span>
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>PI PYRAMID HOME BOT (MINI MAGIC MIRROR)</span>
                     </a>
                 </li>
 
