--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@ Video archive:  https://archive.org/details/@n-o-d-e
             
             <ul>
 
+
+                <li>
+                    <a href="http://n-o-d-e.net/dongle2.html">
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>THE PI ZERO W DONGLE ADDON (VERSION 2)</span>
+                    </a>
+                </li>
+
                 <li>
                     <a href="http://n-o-d-e.net/node_updates2.html">
                         <span class="tag">[NO]</span><span>NODE UPDATES</span>
