New Post: Zero Terminal

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
 
                 <li>
+                    <a href="http://n-o-d-e.net/zeroterminal.html">
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>THE ZERO TERMINAL (PORTABLE PI ZERO W)</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/dongle2.html">
                         <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>THE PI ZERO W DONGLE ADDON (VERSION 2)</span>
                     </a>
