New Post: Casio

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
 
                 <li>
+                    <a href="http://n-o-d-e.net/casio.html">
+                        <span class="tag">[HW]</span><span>CASIO WATCH MOD</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/cd38.html">
                         <span class="tag">[CD]</span><span>CYBER DUMP 38 / UPS DRONE, SECURITY BOT, LIGHT FIELD MIXED REALITY</span>
                     </a>
