--- a/shop/index.html
+++ b/shop/index.html
@@ -62,8 +62,15 @@
 
                 <p id="hardware" class="subtitle">HARDWARE</p>
 
+                <img src="https://i.imgur.com/qmKzNnI.png" />
+                <p class="shop">Modified Casio Watch - Custom black watch face, new bright white LED, NFC chip inside the body, and micro-SD card socket on the backplate. <a href="https://n-o-d-e.net/casio.html" target="_blank">View video</a> for more details.<br>--<br>
+                &pound;30.00 (~$38US) + Shipping <a href="https://n-o-d-e.myshopify.com/cart/29559833547:1?channel=buy_button" target="_blank">[BUY NOW]</a><br>
+                <br>
+                Note: Due to high demand, there is a 2 week lead time.
+                </p>
+
                 <img src="https://i.imgur.com/7RWrlSM.png" />
-                <p class="shop">USB Condom Keychain - Charge/power your USB devices safely with this hand-made keychain. <a href="https://n-o-d-e.net/usbcondom3.html" target="_blank">View video</a> for details/compatibility. Bitcoin accepted<br>--<br>
+                <p class="shop">USB Condom Keychain - Charge/power your USB devices safely with this hand-made keychain. <a href="https://n-o-d-e.net/usbcondom3.html" target="_blank">View video</a> for details/compatibility.<br>--<br>
                 &pound;8.75 (~$11US) + Shipping <a href="https://n-o-d-e.myshopify.com/cart/25852190859:1?channel=buy_button" target="_blank">[BUY NOW]</a><br>
                 <br>
                 Note: I make these in regular batches, so if it says "Sold Out", check back.
