--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@ Video archive:  https://archive.org/details/@n-o-d-e
             
             <ul>
 
+                <li>
+                    <a href="http://n-o-d-e.net/casio2.html">
+                        <span class="tag">[HW]</span><span>MORE CASIO WATCH MODS (INVERTED AND TRANSLUCENT LCD)</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="http://n-o-d-e.net/dd15.html">
