New Post: Decentraland

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/decentraland.html">
+                        <span class="tag">[ID]</span><span>DECENTRALAND: P2P VIRTUAL REALITY</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/casio2.html">
                         <span class="tag">[HW]</span><span>MORE CASIO WATCH MODS (INVERTED AND TRANSLUCENT LCD)</span>
                     </a>
