--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cd40.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 40 / VR FILMS, ARTIFICIAL WOMB, FIREFIGHTER ROBOT, DECENTRALAND</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/decentraland.html">
                         <span class="tag">[ID]</span><span>DECENTRALAND: P2P VIRTUAL REALITY</span>
                     </a>
