--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cd41.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 41 / AUGMENTED DRONES, BITCOIN GROWTH, SNAKE ROBOT, AI FILM</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="http://n-o-d-e.net/opendime2.html">
+                        <span class="tag">[HW]</span><span>OPENDIME V2: CYBERPUNK CREDSTICKS RETURN (+ GIVEAWAY)</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/dd16.html">
                         <span class="tag">[DD]</span><span>DEAD DROP 16 / ANTBLEED, USB CANARY, LINUX PRIVACY GUIDE, BRICKERBOT</span>
                     </a>
