New Post: Pocket Node

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/pocketnode.html">
+                        <span class="tag">[HW]</span><span>THE POCKET NODE (RASPBERRY PI 3 SSD SERVER)</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/cd41.html">
                         <span class="tag">[CD]</span><span>CYBER DUMP 41 / AUGMENTED DRONES, BITCOIN GROWTH, SNAKE ROBOT, AI FILM</span>
                     </a>
