New Post: The Duality Of Technology

--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/duality.html">
+                        <span class="tag">[ID]</span><span>THE DUALITY OF TECHNOLOGY</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="http://n-o-d-e.net/faq.html">
+                        <span class="tag">[NO]</span><span>FREQUENTLY ASKED QUESTIONS</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="http://n-o-d-e.net/pocketnodeguide.html">
+                        <span class="tag">[HW]</span><span>HOW TO CREATE A POCKET NODE</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/pocketnode.html">
                         <span class="tag">[HW]</span><span>THE POCKET NODE (RASPBERRY PI 3 SSD SERVER)</span>
                     </a>
