--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cd42.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 42 / 4 ARMS, X-RAY DRONES, LONG RANGE WIFI, FACE TRACKING</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/duality.html">
                         <span class="tag">[ID]</span><span>THE DUALITY OF TECHNOLOGY</span>
                     </a>
