New Post: Dongle3

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/dongle3.html">
+                        <span class="tag">[HW]</span><span>HOW TO CREATE A STEALTH PI ZERO USB DONGLE</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="http://n-o-d-e.net/pislim.html">
+                        <span class="tag">[HW]</span><span>RASPBERRY PI 3 SLIM</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/cd42.html">
                         <span class="tag">[CD]</span><span>CYBER DUMP 42 / 4 ARMS, X-RAY DRONES, LONG RANGE WIFI, FACE TRACKING</span>
                     </a>
