New Post: Decentraland2

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/decentraland2.html">
+                        <span class="tag">[ID]</span><span>DECENTRALAND: BUILDING A P2P VIRTUAL REALITY</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/dongle3.html">
                         <span class="tag">[HW]</span><span>HOW TO CREATE A STEALTH PI ZERO USB DONGLE</span>
                     </a>
