--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cd43.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 43 / MIRA PRISM, NO MONITORS, PI AI, ADVANCED ROBOTIC ARMS</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/decentraland2.html">
                         <span class="tag">[ID]</span><span>DECENTRALAND: BUILDING A P2P VIRTUAL REALITY</span>
                     </a>
