New Post: zeroterminal2

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/zeroterminal2.html">
+                        <span class="tag">[HW]</span><span>ZERO TERMINAL 2 PROTOTYPE (PORTABLE PI ZERO W)</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/cd43.html">
                         <span class="tag">[CD]</span><span>CYBER DUMP 43 / MIRA PRISM, NO MONITORS, PI AI, ADVANCED ROBOTIC ARMS</span>
                     </a>
