--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
                 <li>
+                    <a href="http://n-o-d-e.net/cd44.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 44 / SELF DRIVING WHEELCHAIR, AUTONOMOUS SHOP, SAFE CRACKING BOT</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="http://n-o-d-e.net/zeroterminal2.html">
-                        <span class="tag">[HW]</span><span>ZERO TERMINAL 2 PROTOTYPE (PORTABLE PI ZERO W)</span>
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>ZERO TERMINAL 2 PROTOTYPE (PORTABLE PI ZERO W)</span>
                     </a>
                 </li>
 
@@ -67,13 +73,13 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <li>
                     <a href="http://n-o-d-e.net/dongle3.html">
-                        <span class="tag">[HW]</span><span>HOW TO CREATE A STEALTH PI ZERO USB DONGLE</span>
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>HOW TO CREATE A STEALTH PI ZERO USB DONGLE</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="http://n-o-d-e.net/pislim.html">
-                        <span class="tag">[HW]</span><span>RASPBERRY PI 3 SLIM</span>
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>RASPBERRY PI 3 SLIM</span>
                     </a>
                 </li>
 
