--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
 
                 <!-- <li>
-                    <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>AUGUST 7 - NEW STOCK IN SHOP</span></span>
+                    <a href="https://n-o-d-e.net/shop/#tees">
+                        <span class="notification"><span>[!!]</span><span>LAST CHANCE TO PICK UP CURRENT TSHIRT DESIGNS BEFORE SHOP REVAMP</span></span>
                     </a>
                 </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd46.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 46 / MULTI-MONITOR PI, AR SURGERY, BITCOIN IN SPACE, HYPERLOOP ONE</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/cd45.html">
