--- a/index.html
+++ b/index.html
@@ -48,11 +48,23 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <!-- <li>
-                    <a href="https://n-o-d-e.net/shop/#tees">
-                        <span class="notification"><span>[!!]</span><span>LAST CHANCE TO PICK UP CURRENT TSHIRT DESIGNS BEFORE SHOP REVAMP</span></span>
+                <li>
+                    <a href="https://n-o-d-e.net/shop/">
+                        <span class="notification"><span>[!!]</span><span>PI ZERO USB DONGLE CASES BACK IN STOCK</span></span>
                     </a>
-                </li> -->
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/dd17.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 17 / SECURE ENCLAVE KEY, DEFCON VIDS, CAN VULNERABILITY, SMART LOCK FAIL</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/decentraland3.html">
+                        <span class="tag">[ID]</span><span>RE: DECENTRALAND</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/cd46.html">
