--- a/index.html
+++ b/index.html
@@ -48,9 +48,27 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <li>
+                <!-- <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>PI ZERO USB DONGLE CASES BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>NEW DIGITAL DOGTAG PRODUCT IN STOCK</span></span>
+                    </a>
+                </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/multitool2.html">
+                        <span class="tag">[HW]</span><span>NODE DIGITAL MULTITOOL</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd47.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 47 / AUGMENTED ECHOLOCATION, TRANSFORMER EXOSKELETON, BIOHACK THE PLANET</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/usbcondom4.html">
+                        <span class="tag">[HW]</span><span>USB CHARGING KEYCHAIN (V4)</span>
                     </a>
                 </li>
 
@@ -272,7 +290,7 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <li>
                     <a href="https://n-o-d-e.net/usbcondom3.html">
-                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>USB CONDOM KEYCHAIN (V3)</span>
+                        <span alt="highlight" class="important">&#215;</span><span class="tag">[HW]</span><span>USB CHARGING KEYCHAIN (V3)</span>
                     </a>
                 </li>
 
@@ -878,7 +896,7 @@ Video archive:  https://archive.org/details/@n-o-d-e
                 
                 <li>
                     <a href="https://n-o-d-e.net/usbcondom.html">
-                        <span class="tag">[HW]</span><span>HOW TO CREATE A TINY USB CONDOM (V2) </span>
+                        <span class="tag">[HW]</span><span>HOW TO CREATE A TINY USB CHARGING (V2) </span>
                     </a>
                 </li>
                 
