New Post: NODE UPDATES 4

--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <!-- <li>
+                <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>NEW DIGITAL DOGTAG PRODUCT IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>USB CHARGING KEYCHAINS BACK IN STOCK</span></span>
                     </a>
-                </li> -->
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/node_updates4.html">
+                        <span class="tag">[NO]</span><span>NODE UPDATES - OCT 2017</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/multitool2.html">
