--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
                 </li>
 
                 <li>
+                    <a href="https://n-o-d-e.net/cd48.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 48 / TRANSFORMER DRONE, SAMSUNG ODYSSEY, ROBOT DENTIST, OPEN HARDWARE</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="https://n-o-d-e.net/node_updates4.html">
                         <span class="tag">[NO]</span><span>NODE UPDATES - OCT 2017</span>
                     </a>
