--- a/cd48.html
+++ b/cd48.html
@@ -54,9 +54,9 @@
                 </div>
                 <p class="description">
                 - <a href="https://www.youtube.com/watch?v=XpB8T6E2Q8s" target="_blank">Youtube link</a><br>
-                - <a href="https://archive.org/download/cyberdump48/cyberdump48.mp4" target="_blank">Archive.org mirror</a><br>
-                - <a href="https://archive.org/download/cyberdump48/cyberdump48.torrent" target="_blank">Torrent</a><br>
-                - <a href="https://keybase.pub/nodefiles/cyberdump48.mp4" target="_blank">Keybase mirror</a>
+                - <a href="https://archive.org/download/cyberdump48/cd48.mp4" target="_blank">Archive.org mirror</a><br>
+                - <a href="https://archive.org/download/cyberdump48/cd48.torrent" target="_blank">Torrent</a><br>
+                - <a href="https://keybase.pub/nodefiles/cd48.mp4" target="_blank">Keybase mirror</a>
                 </p>
 
 
