--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <li>
+                <!-- <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>USB CHARGING KEYCHAINS BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>MODIFIED CASIO BACK IN STOCK</span></span>
+                    </a>
+                </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/dd18.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 18 / 3 BILLION BREACH, RPITX, KEYBASE ENCRYPTED REPOS, SMART METER VULN</span>
                     </a>
                 </li>
 
