New Post: Terminal_3

--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <!-- <li>
+                <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>MODIFIED CASIO BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>USB KEYCHAINS BACK IN STOCK</span></span>
                     </a>
-                </li> -->
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/terminal_3.html">
+                        <span class="tag">[HW]</span><span>THE HANDHELD LINUX TERMINAL VERSION 3 (PORTABLE PI 3)</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/dd18.html">
