--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <li>
+                <!-- <li>
                     <a href="https://n-o-d-e.net/shop/">
                         <span class="notification"><span>[!!]</span><span>USB KEYCHAINS BACK IN STOCK</span></span>
+                    </a>
+                </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd49.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 49 / AI DEVELOPMENTS, ROBOT SURGEON, DREMEL WORKSTATION, POST BOT</span>
                     </a>
                 </li>
 
