--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
                 </li> -->
 
                 <li>
+                    <a href="https://n-o-d-e.net/dd19.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 19 / PIZZA HUT BREACH, WPA2 VECTOR, SDR 101, INTEL M.E. TURNED OFF</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="https://n-o-d-e.net/cd49.html">
                         <span class="tag">[CD]</span><span>CYBER DUMP 49 / AI DEVELOPMENTS, ROBOT SURGEON, DREMEL WORKSTATION, POST BOT</span>
                     </a>
