--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <!-- <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>USB KEYCHAINS BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>MODIFIED CASIO WATCHES BACK IN STOCK</span></span>
                     </a>
                 </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd50.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 50 / INTERACTIVE NFC, VR WORKOUTS, MECH ROBOT, SNAKEBOT</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/dd19.html">
