New Post: ZeroBattery

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
                 </li> -->
 
                 <li>
+                    <a href="https://n-o-d-e.net/zerobattery.html">
+                        <span class="tag">[HW]</span><span>PI ZERO BATTERY BACKPACK PROTOTYPE</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="https://n-o-d-e.net/cd50.html">
                         <span class="tag">[CD]</span><span>CYBER DUMP 50 / INTERACTIVE NFC, VR WORKOUTS, MECH ROBOT, SNAKEBOT</span>
                     </a>
