--- a/index.html
+++ b/index.html
@@ -50,9 +50,28 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <!-- <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>MODIFIED CASIO WATCHES BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>DIGITAL MULTITOOLS NOW IN THE SHOP</span></span>
                     </a>
                 </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd52.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 52 / DIY SATELLITE ANTENNA, FORD EXOSKELETON, SELF-DRIVING TAXI, VR KEYBOARD</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd51.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 51 / 3D PRINTED FOOT, MOTORBIKE ROBOT, AI PORTRAITS, SHY BOT</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/dd20.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 20 / NEW DEFCON VIDS, BOT AUTHENTICATOR, OPEN LAPTOP, METATAG VECTOR</span>
+                    </a>
+                </li>
+
 
                 <li>
                     <a href="https://n-o-d-e.net/zerobattery.html">
