--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <!-- <li>
+                <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>DIGITAL MULTITOOLS NOW IN THE SHOP</span></span>
+                        <span class="notification"><span>[!!]</span><span>WATCHES, KEYCHAINS, PI ZERO CASES BACK IN STOCK</span></span>
                     </a>
-                </li> -->
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd53.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 53 / ATLAS BACKFLIP, POTTERY PRINTER, ROBOT WAREHOUSES, BIONIC PANCREAS</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/dd21.html">
