New Post: Net Neutrality

--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <li>
+                <!-- <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>WATCHES, KEYCHAINS, PI ZERO CASES BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>DIGITAL MULTITOOLS BACK IN STOCK</span></span>
+                    </a>
+                </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/netneutrality.html">
+                        <span class="tag">[ID]</span><span>NET NEUTRALITY</span>
                     </a>
                 </li>
 
