New Post: meshdevice

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
                 </li> -->
 
                 <li>
+                    <a href="https://n-o-d-e.net/meshdevice.html">
+                        <span class="tag">[ID]</span><span>HELP BUILD AN OFF GRID COMMUNICATIONS / MESH NETWORK DEVICE</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="https://n-o-d-e.net/netneutrality.html">
                         <span class="tag">[ID]</span><span>NET NEUTRALITY</span>
                     </a>
