--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <!-- <li>
+                <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>DIGITAL MULTITOOLS BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>20% OFF TEES/STICKERS. USE CODE: DAYSIX</span></span>
                     </a>
-                </li> -->
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/dd23.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 23 / SYSTEM76 INTEL ME, COVERT CRYPTO MINING, RFID REPEATERS</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/cd55.html">
