New Post: Thank You

--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>20% OFF TEES/STICKERS. USE CODE: DAYSIX</span></span>
+                        <span class="notification"><span>[!!]</span><span>20% OFF TEES. USE CODE: DAYEIGHT</span></span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/thankyou.html">
+                        <span class="tag">[NO]</span><span>THANK YOU (+ GIVEAWAY)</span>
                     </a>
                 </li>
 
