--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>20% OFF TEES. USE CODE: DAYEIGHT</span></span>
+                        <span class="notification"><span>[!!]</span><span>25% OFF TEES &amp; STICKERS. USE CODE: BONUSDAY</span></span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd56.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 56 / SWIMMING DRONE, FASTER 3D PRINTS, LIGHTNING NETWORK, REMOTE DRIVING</span>
                     </a>
                 </li>
 
