--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ Video archive:  https://archive.org/details/@n-o-d-e
                 </li>
 
                 <li>
+                    <a href="https://n-o-d-e.net/dd24.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 24 / 1.4 BILLION RECORDS, HP KEYLOGGING, NON-GPS TRACKING, P2P WEBSITES</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="https://n-o-d-e.net/cd56.html">
                         <span class="tag">[CD]</span><span>CYBER DUMP 56 / SWIMMING DRONE, FASTER 3D PRINTS, LIGHTNING NETWORK, REMOTE DRIVING</span>
                     </a>
