New Posts: cd57, nfckey, node_goals

--- a/index.html
+++ b/index.html
@@ -48,9 +48,27 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <li>
+                <!-- <li>
                     <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>25% OFF TEES &amp; STICKERS. USE CODE: BONUSDAY</span></span>
+                        <span class="notification"><span>[!!]</span><span>MODIFIED WATCHES BACK IN STOCK</span></span>
+                    </a>
+                </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd57.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 57 / MINORITY REPORT GLOVES, PINEAPPLE FUND, 3D PRINTED HAND (+ GIVEAWAY WINNERS)</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/node_goals.html">
+                        <span class="tag">[NO]</span><span>THE FUTURE OF NODE: BUILD THE WORLD WE WANT TO SEE</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/nfckey.html">
+                        <span class="tag">[HW]</span><span>THE NFC KEY</span>
                     </a>
                 </li>
 
