--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
 
                 <!-- <li>
-                    <a href="https://n-o-d-e.net/shop/">
-                        <span class="notification"><span>[!!]</span><span>MODIFIED WATCHES BACK IN STOCK</span></span>
+                    <a href="https://n-o-d-e.net/shop">
+                        <span class="notification"><span>[!!]</span><span>WATCHES, MULTITOOLS, KEYCHAINS ALL BACK IN STOCK</span></span>
                     </a>
                 </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/icebox.html">
+                        <span class="tag">[HW]</span><span>ICEBOX: COLD WALLET DEVICE</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/dd25.html">
